// Protobufs used for bNotify.
syntax = "proto3";

package cc.bran.bnotify.proto;

option java_package = "cc.bran.bnotify.proto";
option java_outer_classname = "BNotifyProtos";

// Service definitions.
service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse) {}
}

// Service request/response messages.
message SendNotificationRequest {
  // The notification to send.
  Notification notification = 1;
}

message SendNotificationResponse {
  // Purposefully empty.
}

// Other messages.
message Notification {
  // Notification text.
  string text = 1;
  // Notification title.
  string title = 2;
}

message Message {
  // Server ID.
  bytes server_id = 1;
  // Message sequence number.
  uint64 seq = 2;
  // Notification.
  Notification notification = 3;
}

message Envelope {
  // Encrypted message bytes.
  bytes message = 1;
  // Nonce used when encrypting message.
  bytes nonce = 2;
}

message PendingPayload {
  // The payload to send.
  bytes payload = 1;
  // The number of attempts to send this payload already.
  int32 send_attempts = 2;
}

message BNotifySettings {
  // Google API key.
  string api_key = 1;
  // GCM registration ID.
  string registration_id = 2;
  // Password.
  string password = 3;
}

message SequenceRange {
  // Minimum (inclusive).
  uint64 min = 1;
  // Maximum (inclusive).
  uint64 max = 2;
}

// Per-server information stored by client.
message ServerState {
  // Maximum sequence seen from server.
  repeated SequenceRange used_seqs = 1;
}
